deploy/basic-ingress-nginx.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: xor-encoder
---
apiVersion: v1
kind: Service
metadata:
  name: xor-encoder
  namespace: xor-encoder
spec:
  selector:
    app: xor-encoder
  ports:
    - name: http-80
      protocol: TCP
      port: 80
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: xor-encoder
  namespace: xor-encoder
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  # tls:
  #   - hosts:
  #       - <your hostname>
  #     secretName: xor-encoder-tls
  rules:
    - host: <your hostname>
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: xor-encoder
                port:
                  name: http-80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xor-encoder
  namespace: xor-encoder
spec:
  selector:
    matchLabels:
      app: xor-encoder
  template:
    metadata:
      labels:
        app: xor-encoder
    spec:
      containers:
        - name: xor-encoder
          image: na7r1x/xor-encoder:latest
          resources: {}
          ports:
            - containerPort: 80
              protocol: TCP
